[package]
name = "fltk-sweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
ndarray = "0.15.4"
rand = "0.8.4"
structopt = "0.3.25"
rust-embed = "6.3.0"
